cargo-features = ["default-run"]

[package]
authors = ["Scott Olson <scott@solson.me>"]
description = "An experimental interpreter for Rust MIR."
license = "MIT/Apache-2.0"
name = "miri"
repository = "https://github.c../..-lang/miri"
version = "0.2.0"
build = "build.rs"
default-run = "miri"
edition = "2018"

[lib]
test = true # we have unit tests
doctest = false # but no doc tests

[[bin]]
name = "miri"
test = false # we have no unit tests
doctest = false # and no doc tests

[[bin]]
name = "cargo-miri"
test = false # we have no unit tests
doctest = false # and no doc tests
required-features = ["cargo_miri"]

[[bin]]
name = "miri-rustc-tests"
test = false # we have no unit tests
doctest = false # and no doc tests
required-features = ["rustc_tests"]

[dependencies]
byteorder = { version = "1.1", features = ["i128"]}
cargo_metadata = { version = "0.7", optional = true }
directories = { version = "1.0", optional = true }
rustc_version = { version = "0.2.3", optional = true }
env_logger = "0.6"
log = "0.4"
shell-escape = "0.1.4"
# A noop dependency that changes in the Rust repository, it's a bit of a hack.
# See the `src/too../..c-workspace-hack/README.md` file in `rust-lang/rust`
# for more information.
rustc-workspace-hack = "1.0.0"
hex = "0.3.2"
rand = "0.6"




syntax = { path = "../../libsyntax" }
syntax_ext = { path = "../../libsyntax_ext" }
syntax_pos = { path = "../../libsyntax_pos" }
serialize = { path = "../../libserialize" }
rustc = { path = "../../librustc" }
rustc_allocator = { path = "../../librustc_allocator" }
rustc_borrowck = { path = "../../librustc_borrowck" }
rustc_incremental = { path = "../../librustc_incremental" }
rustc_traits = { path = "../../librustc_traits" }
rustc_data_structures = { path = "../../librustc_data_structures" }
rustc_codegen_ssa = { path = "../../librustc_codegen_ssa" }
rustc_codegen_utils = { path = "../../librustc_codegen_utils" }
rustc_metadata = { path = "../../librustc_metadata" }
rustc_mir = { path = "../../librustc_mir" }
rustc_passes = { path = "../../librustc_passes" }
rustc_typeck = { path = "../../librustc_typeck" }
rustc_lint = { path = "../../librustc_lint" }
rustc_errors = { path = "../../librustc_errors" }
rustc_plugin = { path = "../../librustc_plugin" }
rustc_privacy = { path = "../../librustc_privacy" }
rustc_resolve = { path = "../../librustc_resolve" }
rustc_fs_util = { path = "../../librustc_fs_util" }
rustc_target = { path = "../../librustc_target" }



[build-dependencies]
vergen = "3"

[features]
default = ["cargo_miri"]
cargo_miri = ["cargo_metadata", "directories", "rustc_version"]
rustc_tests = []

[dev-dependencies]
compiletest_rs = { version = "0.3.22", features = ["tmp", "stable"] }
colored = "1.6"
